# drugs-satisfaction

./: .gitignore  Pipfile  README.md  cache_operations.py  credentials_template.json  erowid_download_thesis.py  erowid_scraping.py  experiences_scraper.py  pyproject.toml  urls_scraper.py  utils.py
notebooks/: Erowid data analysis.ipynb
src/: cache_operations.py  experiences_scraper.py  processor.py  urls_scraper.py  utils.py
src/scraper/: cache_operations.py  connection.py  experiences_scraper.py  scrapers.py  urls_scraper.py  utils.py
