[tool.poetry]
name = "drugs-satisfaction"
version = "0.1.0"
description = ""
authors = ["Carotanza"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
Scrapy = "^2.5.0"
beautifulsoup4 = "^4.9.3"
requests-cache = "^0.6.3"
PySocks = "^1.7.1"
tqdm = "^4.60.0"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
